--- a/addusers.yml
+++ b/addusers.yml
@@ -5,6 +5,10 @@
     -  "satish"
     -  "kiran"
   tasks:
+  - name: "Ensure group admin exists"
+    group:
+      name: admin
+      state: present
   - name: "Create user accounts"
     user:
       name: "{{ item }}"
